# magicband-ctl

./: Cargo.toml
src/: ble.rs  main.rs  protocol.rs
